--- a/08_H743ZI_Bootloader.ioc
+++ b/08_H743ZI_Bootloader.ioc
@@ -7,20 +7,24 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=USART2
-Mcu.IP5=USB_DEVICE
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP5=USART3
+Mcu.IP6=USB_DEVICE
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PH0-OSC_IN (PH0)
-Mcu.Pin1=PH1-OSC_OUT (PH1)
-Mcu.Pin2=PA2
-Mcu.Pin3=PA11
-Mcu.Pin4=PA12
-Mcu.Pin5=PD6
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
-Mcu.PinsNb=8
+Mcu.Pin0=PC13
+Mcu.Pin1=PH0-OSC_IN (PH0)
+Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
+Mcu.Pin2=PH1-OSC_OUT (PH1)
+Mcu.Pin3=PD8
+Mcu.Pin4=PD9
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PD5
+Mcu.Pin8=PD6
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -28,9 +32,11 @@ MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -41,8 +47,10 @@ PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=BTN_USER
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PCC.Checker=false
 PCC.Line=STM32H743/753
 PCC.MCU=STM32H743ZITx
@@ -51,8 +59,21 @@ PCC.Seq0=0
 PCC.Series=STM32H7
 PCC.Temperature=25
 PCC.Vdd=3.0
+PD5.Locked=true
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
 PD6.Signal=USART2_RX
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -84,7 +105,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -164,8 +185,12 @@ RCC.VCO3OutputFreq_Value=100781250
 RCC.VCOInput1Freq_Value=12500000
 RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=DFU
 USB_DEVICE.IPParameters=VirtualMode-DFU_FS,VirtualModeFS,CLASS_NAME_FS,USBD_DFU_APP_DEFAULT_ADD-DFU_FS
 USB_DEVICE.USBD_DFU_APP_DEFAULT_ADD-DFU_FS=0x08020000
