--- a/08_H743ZI_Bootloader.ioc
+++ b/08_H743ZI_Bootloader.ioc
@@ -14,17 +14,23 @@ Mcu.IPNb=8
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
-Mcu.Pin1=PH0-OSC_IN (PH0)
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
-Mcu.Pin2=PH1-OSC_OUT (PH1)
-Mcu.Pin3=PD8
-Mcu.Pin4=PD9
-Mcu.Pin5=PA11
-Mcu.Pin6=PA12
-Mcu.Pin7=PD5
-Mcu.Pin8=PD6
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PD5
+Mcu.Pin13=PD6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
+Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin4=PH1-OSC_OUT (PH1)
+Mcu.Pin5=PB0
+Mcu.Pin6=PB14
+Mcu.Pin7=PD8
+Mcu.Pin8=PD9
+Mcu.Pin9=PA8
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -47,10 +53,34 @@ PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA8.GPIOParameters=GPIO_Label,GPIO_PuPd
+PA8.GPIO_Label=MCO
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Mode=Clock-out-1
+PA8.Signal=RCC_MCO_1
+PB0.GPIOParameters=GPIO_Label,GPIO_PuPd
+PB0.GPIO_Label=LED1
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label,GPIO_PuPd
+PB14.GPIO_Label=LED3
+PB14.GPIO_PuPd=GPIO_PULLUP
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label,GPIO_PuPd
+PB7.GPIO_Label=LED2
+PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BTN_USER
 PC13.Locked=true
 PC13.Signal=GPXTI13
+PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
+PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
+PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
 PCC.Checker=false
 PCC.Line=STM32H743/753
 PCC.MCU=STM32H743ZITx
@@ -91,7 +121,7 @@ ProjectManager.DeviceId=STM32H743ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.3.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=true
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x2000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
@@ -101,12 +131,12 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=08_H743ZI_Bootloader.ioc
 ProjectManager.ProjectName=08_H743ZI_Bootloader
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
-RCC.ADCFreq_Value=50390625
+RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
 RCC.APB1Freq_Value=100000000
@@ -125,17 +155,17 @@ RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
 RCC.DFSDMACLkFreq_Value=400000000
 RCC.DFSDMFreq_Value=100000000
-RCC.DIVM1=2
-RCC.DIVN1=64
+RCC.DIVM1=1
+RCC.DIVN1=100
 RCC.DIVP1Freq_Value=400000000
-RCC.DIVP2Freq_Value=50390625
-RCC.DIVP3Freq_Value=50390625
+RCC.DIVP2Freq_Value=16125000
+RCC.DIVP3Freq_Value=16125000
 RCC.DIVQ1Freq_Value=400000000
-RCC.DIVQ2Freq_Value=50390625
-RCC.DIVQ3Freq_Value=50390625
+RCC.DIVQ2Freq_Value=16125000
+RCC.DIVQ3Freq_Value=16125000
 RCC.DIVR1Freq_Value=400000000
-RCC.DIVR2Freq_Value=50390625
-RCC.DIVR3Freq_Value=50390625
+RCC.DIVR2Freq_Value=16125000
+RCC.DIVR3Freq_Value=16125000
 RCC.FDCANFreq_Value=400000000
 RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
@@ -143,18 +173,20 @@ RCC.HCLK3ClockFreq_Value=200000000
 RCC.HCLKFreq_Value=200000000
 RCC.HPRE=RCC_HCLK_DIV2
 RCC.HRTIMFreq_Value=200000000
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=8000000
 RCC.I2C123Freq_Value=100000000
 RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
 RCC.LPUART1Freq_Value=100000000
-RCC.LTDCFreq_Value=50390625
+RCC.LTDCFreq_Value=16125000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=400000000
 RCC.PLL1_VCI_Range=RCC_PLL1VCIRANGE_3
+RCC.PLL2FRACN=0
+RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=200000000
@@ -180,11 +212,11 @@ RCC.USART234578Freq_Value=100000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=800000000
-RCC.VCO2OutputFreq_Value=100781250
-RCC.VCO3OutputFreq_Value=100781250
-RCC.VCOInput1Freq_Value=12500000
-RCC.VCOInput2Freq_Value=781250
-RCC.VCOInput3Freq_Value=781250
+RCC.VCO2OutputFreq_Value=32250000
+RCC.VCO3OutputFreq_Value=32250000
+RCC.VCOInput1Freq_Value=8000000
+RCC.VCOInput2Freq_Value=250000
+RCC.VCOInput3Freq_Value=250000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -192,8 +224,9 @@ USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=DFU
-USB_DEVICE.IPParameters=VirtualMode-DFU_FS,VirtualModeFS,CLASS_NAME_FS,USBD_DFU_APP_DEFAULT_ADD-DFU_FS
+USB_DEVICE.IPParameters=VirtualMode-DFU_FS,VirtualModeFS,CLASS_NAME_FS,USBD_DFU_APP_DEFAULT_ADD-DFU_FS,USBD_DFU_MEDIA-DFU_FS
 USB_DEVICE.USBD_DFU_APP_DEFAULT_ADD-DFU_FS=0x08020000
+USB_DEVICE.USBD_DFU_MEDIA-DFU_FS=@Internal Flash   /0x08000000/01*128Ka,7*128Kg
 USB_DEVICE.VirtualMode-DFU_FS=Dfu
 USB_DEVICE.VirtualModeFS=Dfu_FS
 USB_OTG_FS.IPParameters=VirtualMode
